openshift-object-templates/blackbox-exporter.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: blackbox-exporter
  name: blackbox-exporter
spec:
  replicas: 1
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: blackbox
      containers:
        - image: prom/blackbox-exporter:latest
          name: blackbox-exporter
          args:
            - --log.level=debug
            - --config.file=/tmp/blackbox.yml
          volumeMounts:
            - name: config-volume
              mountPath: /tmp
          ports:
            - containerPort: 9115
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blackbox-exporter
  name: blackbox-exporter
spec:
  ports:
  - name: 9115-tcp
    port: 9115
    protocol: TCP
    targetPort: 9115
  selector:
    app: blackbox-exporter
    deploymentconfig: blackbox-exporter

---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: blackbox-exporter
  name: blackbox-exporter
spec:
  port:
    targetPort: 9115-tcp
  to:
    kind: Service
    name: blackbox-exporter
