openshift-object-templates/kubemonkey-victim.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubemonkey-victim
  labels:
    kube-monkey/enabled: enabled
    kube-monkey/identifier: monkey-victim
    kube-monkey/mtbf: '2'
    kube-monkey/kill-mode: "fixed"
    kube-monkey/kill-value: '1'
    app: kubemonkey-victim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubemonkey-victim
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        kube-monkey/enabled: enabled
        kube-monkey/identifier: monkey-victim
        kube-monkey/mtbf: '2'
        kube-monkey/kill-mode: "fixed"
        kube-monkey/kill-value: '1'
        app: kubemonkey-victim
      name: kubemonkey-victim
    spec:
      containers:
        - name: kubemonkey-victim
          image: image-registry.openshift-image-registry.svc:5000/devconf-demo/dev-conf-demo-app
          ports:
            - containerPort: 8000
              protocol: TCP
            - containerPort: 5000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: kubemonkey-victim
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: kubemonkey-victim

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: kubemonkey-victim-metrics
spec:
  ports:
    - name: 8000-tcp
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: kubemonkey-victim

---
apiVersion: v1
kind: Route
metadata:
  name: kubemonkey-victim
spec:
  to:
    kind: Service
    name: kubemonkey-victim
